Fix speciality & keyskills overflowing

--- a/src/app/office/shared/member-card/member-card.component.scss
+++ b/src/app/office/shared/member-card/member-card.component.scss
@@ -31,6 +31,12 @@
     color: var(--accent);
   }
 
+  &__speciality {
+    display: flex;
+    max-width: 200px;
+    overflow: hidden;
+  }
+
   &__skills {
     display: flex;
     flex-wrap: wrap;
